scraped AH data into excel with nutritional info

--- a/grocery_list/test_ah.ipynb
+++ b/grocery_list/test_ah.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'connector' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lianz\\Python\\personal_projects\\grocery_list\\test_ah.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#Y112sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m pages \u001b[39m=\u001b[39m \u001b[39m14\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#Y112sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mlen\u001b[39m(connector\u001b[39m.\u001b[39msearch_products(\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, pages\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)[\u001b[39m'\u001b[39m\u001b[39mproducts\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'connector' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pages = 14\n",
+    "len(connector.search_products('', pages=0)['products'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,237 +86,111 @@
     "from utils._globals import PRODUCT_DETAILS_KEYS\n",
     "from utils.logger import get_logger\n",
     "import pandas as pd\n",
+    "from tqdm import trange\n",
     "\n",
     "connector = AHConnector()\n",
-    "kip = connector.search_products(query='kip', page=0)\n",
     "\n",
     "# Initialize logger\n",
     "logger = get_logger('test_ah')\n",
     "\n",
     "# Initialize empty lists\n",
     "product_id = []\n",
+    "product_list = []\n",
     "nutrientType = []\n",
-    "nutritentValue = []\n",
-    "units = []\n",
-    "labels = []\n",
+    "nutrientValue = []\n",
+    "unit = []\n",
+    "unitLabel = []\n",
+    "failed_products = []\n",
     "\n",
     "# Loop through all products in the first page of search results for 'kip'\n",
-    "for product in kip['products'][:1]:\n",
-    "    # lag = np.random.randint(low=2, high=5)\n",
-    "    # logger.info(f'Sleeping for {lag} seconds')\n",
-    "    # time.sleep(lag)\n",
-    "    # Get product details\n",
-    "    try:\n",
-    "        logger.info(f'Getting details for product: {product[\"title\"]}')\n",
-    "        product_details = connector.get_product_details(product['webshopId'])\n",
-    "        logger.info(f'Got details for product: {product[\"title\"]}')\n",
-    "    except Exception as e:\n",
-    "        logger.error(f'Failed to get details for product: {product[\"title\"]}')\n",
-    "        logger.error(e)\n",
-    "        continue\n",
+    "pages = 14\n",
+    "# with trange(pages, desc='Gathering product information...',) as t:\n",
+    "for i in range(1, pages+1):\n",
+    "    # t.set_postfix(page=i)\n",
+    "    logger.info(f'Getting products for page {i}...')\n",
+    "    products = connector.search_products(query='', page=t)\n",
+    "    for product in products['products'][:]:\n",
+    "        # lag = np.random.randint(low=2, high=5)\n",
+    "        # logger.info(f'Sleeping for {lag} seconds')\n",
+    "        # time.sleep(lag)\n",
+    "        # Get product details\n",
+    "        try:\n",
+    "            logger.info(f'Getting details for product: {product[\"title\"]}')\n",
+    "            product_details_unmodified = connector.get_product_details(product['webshopId'])\n",
+    "            logger.info(f'Got details for product: {product[\"title\"]}')\n",
+    "        except Exception as e:\n",
+    "            logger.error(f'Failed to get details for product: {product[\"title\"]}')\n",
+    "            logger.error(e)\n",
+    "            failed_products.append(product)\n",
+    "            continue\n",
+    "        \n",
+    "        productId = product_details_unmodified['productId']\n",
+    "        if productId != product['webshopId']:\n",
+    "            logger.error(f'Product ID mismatch: {productId} != {product[\"webshopId\"]}')\n",
+    "            continue\n",
+    "        logger.info(f'Product ID: {productId}')\n",
+    "        \n",
+    "        try:\n",
+    "            logger.info(f'Validating productCard for product: {product[\"title\"]}')\n",
+    "            ProductCard(**product_details_unmodified['productCard'])\n",
+    "            product_info = product_details_unmodified['productCard']\n",
+    "        except ValidationError as e:\n",
+    "            logger.error(f'Failed to validate productCard for product: {product[\"title\"]}')\n",
+    "            logger.error(e)\n",
+    "            failed_products.append(product)\n",
+    "            continue\n",
+    "        \n",
+    "        # Get Product Details\n",
+    "        try:\n",
+    "            logger.info(f'Validating productDetails for product: {product[\"title\"]}')\n",
+    "            product_details ={k: product_info.get(k) for k in PRODUCT_DETAILS_KEYS}\n",
+    "            ProductDetails(**product_details)\n",
+    "            product_list.append(product_details)\n",
     "\n",
-    "    if product_details['productId'] != product['webshopId']:\n",
-    "        logger.error(f'Product ID mismatch: {product_details[\"productId\"]} != {product[\"webshopId\"]}')\n",
-    "        continue\n",
-    "    logger.info(f'Product ID: {product_details[\"productId\"]}')\n",
-    "    \n",
-    "    try:\n",
-    "        ProductCard(**product_details['productCard'])\n",
-    "        product_info = product_details['productCard']\n",
-    "    except ValidationError as e:\n",
-    "        logger.error(f'Failed to validate product info for product: {product[\"title\"]}')\n",
-    "        logger.error(e)\n",
-    "        continue\n",
-    "    # Get Product Details\n",
-    "    try:\n",
-    "        product_details ={k: product_info.get(k) for k in PRODUCT_DETAILS_KEYS}\n",
-    "        ProductDetails(**product_details)\n",
+    "        except ValidationError as e:\n",
+    "            logger.error(f'Failed to validate productDetails for product: {product[\"title\"]}')\n",
+    "            logger.error(e)\n",
+    "            failed_products.append(product)\n",
+    "            continue\n",
+    "        \n",
+    "        # Get nutritional information\n",
+    "        try:\n",
+    "            logger.info(f'Retrieving nutritional information for product: {productId}-{product[\"title\"]}')\n",
+    "            for i  in product_details_unmodified.get('tradeItem').get('nutritionalInformation').get('nutrientHeaders')[0]['nutrientDetail']:\n",
+    "                product_id.append(productId)\n",
+    "                nutrientType.append(i['nutrientTypeCode']['label'])\n",
+    "                nutrientValue.append(i['quantityContained'][0]['value'])\n",
+    "                unit.append(i['quantityContained'][0]['measurementUnitCode']['value'])\n",
+    "                unitLabel.append(i['quantityContained'][0]['measurementUnitCode']['label'])\n",
+    "            logger.info(f'Successfully retrieved nutritional information for {productId}-{product[\"title\"]}\\n')\n",
     "\n",
-    "    except ValidationError as e:\n",
-    "        logger.error(f'Failed to validate product details for product: {product[\"title\"]}')\n",
-    "        logger.error(e)\n",
-    "        continue\n",
-    "    \n",
-    "    # Get nutritional information\n",
-    "    # for i  in product_details.get('tradeItem').get('nutritionalInformation').get('nutrientHeaders')[0]['nutrientDetail']:\n",
-    "    #     print('Nutrtional Info')\n",
-    "    #     print(i['nutrientTypeCode']['label'])\n",
-    "    #     print(i['quantityContained'][0]['value'])\n",
-    "    #     print(i['quantityContained'][0]['measurementUnitCode']['value'])\n",
-    "    #     print(i['quantityContained'][0]['measurementUnitCode']['label'])\n",
-    "    #     print('\\n')\n"
+    "        except ValidationError as e:\n",
+    "            logger.error(f'Failed to retrieve nutritional information for product: {productId}-{product[\"title\"]}')\n",
+    "            logger.error(e)\n",
+    "            failed_products.append(product)\n",
+    "            continue\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            logger.error(f'Failed to retrieve nutritional information for product: {productId}-{product[\"title\"]}')\n",
+    "            logger.error(f'{e}\\n')\n",
+    "            failed_products.append(product)\n",
+    "            continue\n",
+    "        \n",
+    "\n",
+    "nutritional_df = pd.DataFrame(zip(product_id, nutrientType, nutrientValue, unit, unitLabel), columns=['productId', 'nutrientType', 'nutrientValue', 'unit', 'unitLabel'])\n",
+    "productInfo_df = pd.DataFrame(product_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>webshopId</th>\n",
-       "      <td>533083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hqId</th>\n",
-       "      <td>805391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>title</th>\n",
-       "      <td>AH Scharrel kipfilet 2 stuks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>salesUnitSize</th>\n",
-       "      <td>300 g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unitPriceDescription</th>\n",
-       "      <td>prijs per kg €14.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>priceBeforeBonus</th>\n",
-       "      <td>4.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>orderAvailabilityStatus</th>\n",
-       "      <td>IN_ASSORTMENT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mainCategory</th>\n",
-       "      <td>Vlees, kip, vis, vega</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subCategory</th>\n",
-       "      <td>Kipfilet - stuk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subCategoryId</th>\n",
-       "      <td>1231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>brand</th>\n",
-       "      <td>AH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>shopType</th>\n",
-       "      <td>AH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>availableOnline</th>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isPreviouslyBought</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>descriptionHighlights</th>\n",
-       "      <td>&lt;p&gt;&lt;ul&gt;&lt;li&gt;Prijsfavorieten: topkwaliteit en al...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nix18</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isStapelBonus</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isBonus</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>descriptionFull</th>\n",
-       "      <td>&lt;p&gt;Dit product is een Prijsfavoriet. Dat zijn ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isOrderable</th>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isInfiniteBonus</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isSample</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isVirtualBundle</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>isFavorite</th>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>minBestBeforeDays</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                         0\n",
-       "webshopId                                                           533083\n",
-       "hqId                                                                805391\n",
-       "title                                         AH Scharrel kipfilet 2 stuks\n",
-       "salesUnitSize                                                        300 g\n",
-       "unitPriceDescription                                   prijs per kg €14.97\n",
-       "priceBeforeBonus                                                      4.49\n",
-       "orderAvailabilityStatus                                      IN_ASSORTMENT\n",
-       "mainCategory                                         Vlees, kip, vis, vega\n",
-       "subCategory                                                Kipfilet - stuk\n",
-       "subCategoryId                                                         1231\n",
-       "brand                                                                   AH\n",
-       "shopType                                                                AH\n",
-       "availableOnline                                                       True\n",
-       "isPreviouslyBought                                                   False\n",
-       "descriptionHighlights    <p><ul><li>Prijsfavorieten: topkwaliteit en al...\n",
-       "nix18                                                                False\n",
-       "isStapelBonus                                                        False\n",
-       "isBonus                                                              False\n",
-       "descriptionFull          <p>Dit product is een Prijsfavoriet. Dat zijn ...\n",
-       "isOrderable                                                           True\n",
-       "isInfiniteBonus                                                      False\n",
-       "isSample                                                             False\n",
-       "isVirtualBundle                                                      False\n",
-       "isFavorite                                                           False\n",
-       "minBestBeforeDays                                                        2"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.DataFrame.from_dict(product_details, orient='index')"
+    "# write to excel\n",
+    "with pd.ExcelWriter('data\\\\ah.xlsx') as writer:\n",
+    "    nutritional_df.to_excel(writer, sheet_name='nutritionalInfo', index=False)\n",
+    "    productInfo_df.to_excel(writer, sheet_name='productInfo', index=False)"
    ]
   },
   {
