updated ah data script

--- a/grocery_list/test_ah.ipynb
+++ b/grocery_list/test_ah.ipynb
@@ -10,9 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'INTERESTED_KEYS' from 'utils._globals' (c:\\Users\\lianz\\Python\\personal_projects\\grocery_list\\utils\\_globals.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lianz\\Python\\personal_projects\\grocery_list\\test_ah.ipynb Cell 2\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtime\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlogger\u001b[39;00m \u001b[39mimport\u001b[39;00m get_logger\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W1sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_globals\u001b[39;00m \u001b[39mimport\u001b[39;00m INTERESTED_KEYS\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'INTERESTED_KEYS' from 'utils._globals' (c:\\Users\\lianz\\Python\\personal_projects\\grocery_list\\utils\\_globals.py)"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pymongo import MongoClient, ASCENDING, DESCENDING\n",
@@ -76,9 +88,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Gathering product information...:  29%|██▊       | 4/14 [06:50<17:06, 102.70s/it, page=4]\n"
+     ]
+    },
+    {
+     "ename": "HTTPError",
+     "evalue": "400 Client Error: Bad Request for url: https://api.ah.nl/mobile-services/product/search/v2?sortOn=RELEVANCE&sortOn=RELEVANCE&page=4&size=750&query=",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lianz\\Python\\personal_projects\\grocery_list\\test_ah.ipynb Cell 7\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m t\u001b[39m.\u001b[39mset_postfix(page\u001b[39m=\u001b[39mi)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m logger\u001b[39m.\u001b[39minfo(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mGetting products for page \u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m...\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m products \u001b[39m=\u001b[39m connector\u001b[39m.\u001b[39;49msearch_products(query\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m'\u001b[39;49m, page\u001b[39m=\u001b[39;49mi)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39mfor\u001b[39;00m product \u001b[39min\u001b[39;00m products[\u001b[39m'\u001b[39m\u001b[39mproducts\u001b[39m\u001b[39m'\u001b[39m][:]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     \u001b[39m# lag = np.random.randint(low=2, high=5)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     \u001b[39m# logger.info(f'Sleeping for {lag} seconds')\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     \u001b[39m# time.sleep(lag)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     \u001b[39m# Get product details\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lianz/Python/personal_projects/grocery_list/test_ah.ipynb#W6sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\lianz\\anaconda3\\envs\\grocery\\lib\\site-packages\\supermarktconnector\\ah.py:36\u001b[0m, in \u001b[0;36mAHConnector.search_products\u001b[1;34m(self, query, page, size, sort)\u001b[0m\n\u001b[0;32m     30\u001b[0m response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mget(\n\u001b[0;32m     31\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mhttps://api.ah.nl/mobile-services/product/search/v2?sortOn=RELEVANCE\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     32\u001b[0m     params\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39msortOn\u001b[39m\u001b[39m\"\u001b[39m: sort, \u001b[39m\"\u001b[39m\u001b[39mpage\u001b[39m\u001b[39m\"\u001b[39m: page, \u001b[39m\"\u001b[39m\u001b[39msize\u001b[39m\u001b[39m\"\u001b[39m: size, \u001b[39m\"\u001b[39m\u001b[39mquery\u001b[39m\u001b[39m\"\u001b[39m: query},\n\u001b[0;32m     33\u001b[0m     headers\u001b[39m=\u001b[39m{\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mHEADERS, \u001b[39m\"\u001b[39m\u001b[39mAuthorization\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mBearer \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_access_token\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39maccess_token\u001b[39m\u001b[39m'\u001b[39m))}\n\u001b[0;32m     34\u001b[0m )\n\u001b[0;32m     35\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m response\u001b[39m.\u001b[39mok:\n\u001b[1;32m---> 36\u001b[0m     response\u001b[39m.\u001b[39;49mraise_for_status()\n\u001b[0;32m     37\u001b[0m \u001b[39mreturn\u001b[39;00m response\u001b[39m.\u001b[39mjson()\n",
+      "File \u001b[1;32mc:\\Users\\lianz\\anaconda3\\envs\\grocery\\lib\\site-packages\\requests\\models.py:1021\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1016\u001b[0m     http_error_msg \u001b[39m=\u001b[39m (\n\u001b[0;32m   1017\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstatus_code\u001b[39m}\u001b[39;00m\u001b[39m Server Error: \u001b[39m\u001b[39m{\u001b[39;00mreason\u001b[39m}\u001b[39;00m\u001b[39m for url: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39murl\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1018\u001b[0m     )\n\u001b[0;32m   1020\u001b[0m \u001b[39mif\u001b[39;00m http_error_msg:\n\u001b[1;32m-> 1021\u001b[0m     \u001b[39mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m)\n",
+      "\u001b[1;31mHTTPError\u001b[0m: 400 Client Error: Bad Request for url: https://api.ah.nl/mobile-services/product/search/v2?sortOn=RELEVANCE&sortOn=RELEVANCE&page=4&size=750&query="
+     ]
+    }
+   ],
    "source": [
     "from pydantic import ValidationError\n",
     "from models.models import ProductCard, ProductDetails, ProductPrice, NutritionalInfo\n",
@@ -104,77 +137,77 @@
     "\n",
     "# Loop through all products in the first page of search results for 'kip'\n",
     "pages = 14\n",
-    "# with trange(pages, desc='Gathering product information...',) as t:\n",
-    "for i in range(1, pages+1):\n",
-    "    # t.set_postfix(page=i)\n",
-    "    logger.info(f'Getting products for page {i}...')\n",
-    "    products = connector.search_products(query='', page=t)\n",
-    "    for product in products['products'][:]:\n",
-    "        # lag = np.random.randint(low=2, high=5)\n",
-    "        # logger.info(f'Sleeping for {lag} seconds')\n",
-    "        # time.sleep(lag)\n",
-    "        # Get product details\n",
-    "        try:\n",
-    "            logger.info(f'Getting details for product: {product[\"title\"]}')\n",
-    "            product_details_unmodified = connector.get_product_details(product['webshopId'])\n",
-    "            logger.info(f'Got details for product: {product[\"title\"]}')\n",
-    "        except Exception as e:\n",
-    "            logger.error(f'Failed to get details for product: {product[\"title\"]}')\n",
-    "            logger.error(e)\n",
-    "            failed_products.append(product)\n",
-    "            continue\n",
-    "        \n",
-    "        productId = product_details_unmodified['productId']\n",
-    "        if productId != product['webshopId']:\n",
-    "            logger.error(f'Product ID mismatch: {productId} != {product[\"webshopId\"]}')\n",
-    "            continue\n",
-    "        logger.info(f'Product ID: {productId}')\n",
-    "        \n",
-    "        try:\n",
-    "            logger.info(f'Validating productCard for product: {product[\"title\"]}')\n",
-    "            ProductCard(**product_details_unmodified['productCard'])\n",
-    "            product_info = product_details_unmodified['productCard']\n",
-    "        except ValidationError as e:\n",
-    "            logger.error(f'Failed to validate productCard for product: {product[\"title\"]}')\n",
-    "            logger.error(e)\n",
-    "            failed_products.append(product)\n",
-    "            continue\n",
-    "        \n",
-    "        # Get Product Details\n",
-    "        try:\n",
-    "            logger.info(f'Validating productDetails for product: {product[\"title\"]}')\n",
-    "            product_details ={k: product_info.get(k) for k in PRODUCT_DETAILS_KEYS}\n",
-    "            ProductDetails(**product_details)\n",
-    "            product_list.append(product_details)\n",
+    "with trange(pages, desc='Gathering product information...',) as t:\n",
+    "    for i in t:\n",
+    "        t.set_postfix(page=i)\n",
+    "        logger.info(f'Getting products for page {i}...')\n",
+    "        products = connector.search_products(query='', page=i)\n",
+    "        for product in products['products'][:]:\n",
+    "            # lag = np.random.randint(low=2, high=5)\n",
+    "            # logger.info(f'Sleeping for {lag} seconds')\n",
+    "            # time.sleep(lag)\n",
+    "            # Get product details\n",
+    "            try:\n",
+    "                logger.info(f'Getting details for product: {product[\"title\"]}')\n",
+    "                product_details_unmodified = connector.get_product_details(product['webshopId'])\n",
+    "                logger.info(f'Got details for product: {product[\"title\"]}')\n",
+    "            except Exception as e:\n",
+    "                logger.error(f'Failed to get details for product: {product[\"title\"]}')\n",
+    "                logger.error(e)\n",
+    "                failed_products.append(product)\n",
+    "                continue\n",
+    "            \n",
+    "            productId = product_details_unmodified['productId']\n",
+    "            if productId != product['webshopId']:\n",
+    "                logger.error(f'Product ID mismatch: {productId} != {product[\"webshopId\"]}')\n",
+    "                continue\n",
+    "            logger.info(f'Product ID: {productId}')\n",
+    "            \n",
+    "            try:\n",
+    "                logger.info(f'Validating productCard for product: {product[\"title\"]}')\n",
+    "                ProductCard(**product_details_unmodified['productCard'])\n",
+    "                product_info = product_details_unmodified['productCard']\n",
+    "            except ValidationError as e:\n",
+    "                logger.error(f'Failed to validate productCard for product: {product[\"title\"]}')\n",
+    "                logger.error(e)\n",
+    "                failed_products.append(product)\n",
+    "                continue\n",
+    "            \n",
+    "            # Get Product Details\n",
+    "            try:\n",
+    "                logger.info(f'Validating productDetails for product: {product[\"title\"]}')\n",
+    "                product_details ={k: product_info.get(k) for k in PRODUCT_DETAILS_KEYS}\n",
+    "                ProductDetails(**product_details)\n",
+    "                product_list.append(product_details)\n",
     "\n",
-    "        except ValidationError as e:\n",
-    "            logger.error(f'Failed to validate productDetails for product: {product[\"title\"]}')\n",
-    "            logger.error(e)\n",
-    "            failed_products.append(product)\n",
-    "            continue\n",
-    "        \n",
-    "        # Get nutritional information\n",
-    "        try:\n",
-    "            logger.info(f'Retrieving nutritional information for product: {productId}-{product[\"title\"]}')\n",
-    "            for i  in product_details_unmodified.get('tradeItem').get('nutritionalInformation').get('nutrientHeaders')[0]['nutrientDetail']:\n",
-    "                product_id.append(productId)\n",
-    "                nutrientType.append(i['nutrientTypeCode']['label'])\n",
-    "                nutrientValue.append(i['quantityContained'][0]['value'])\n",
-    "                unit.append(i['quantityContained'][0]['measurementUnitCode']['value'])\n",
-    "                unitLabel.append(i['quantityContained'][0]['measurementUnitCode']['label'])\n",
-    "            logger.info(f'Successfully retrieved nutritional information for {productId}-{product[\"title\"]}\\n')\n",
+    "            except ValidationError as e:\n",
+    "                logger.error(f'Failed to validate productDetails for product: {product[\"title\"]}')\n",
+    "                logger.error(e)\n",
+    "                failed_products.append(product)\n",
+    "                continue\n",
+    "            \n",
+    "            # Get nutritional information\n",
+    "            try:\n",
+    "                logger.info(f'Retrieving nutritional information for product: {productId}-{product[\"title\"]}')\n",
+    "                for i  in product_details_unmodified.get('tradeItem').get('nutritionalInformation').get('nutrientHeaders')[0]['nutrientDetail']:\n",
+    "                    product_id.append(productId)\n",
+    "                    nutrientType.append(i['nutrientTypeCode']['label'])\n",
+    "                    nutrientValue.append(i['quantityContained'][0]['value'])\n",
+    "                    unit.append(i['quantityContained'][0]['measurementUnitCode']['value'])\n",
+    "                    unitLabel.append(i['quantityContained'][0]['measurementUnitCode']['label'])\n",
+    "                logger.info(f'Successfully retrieved nutritional information for {productId}-{product[\"title\"]}\\n')\n",
     "\n",
-    "        except ValidationError as e:\n",
-    "            logger.error(f'Failed to retrieve nutritional information for product: {productId}-{product[\"title\"]}')\n",
-    "            logger.error(e)\n",
-    "            failed_products.append(product)\n",
-    "            continue\n",
+    "            except ValidationError as e:\n",
+    "                logger.error(f'Failed to retrieve nutritional information for product: {productId}-{product[\"title\"]}')\n",
+    "                logger.error(e)\n",
+    "                failed_products.append(product)\n",
+    "                continue\n",
     "\n",
-    "        except Exception as e:\n",
-    "            logger.error(f'Failed to retrieve nutritional information for product: {productId}-{product[\"title\"]}')\n",
-    "            logger.error(f'{e}\\n')\n",
-    "            failed_products.append(product)\n",
-    "            continue\n",
+    "            except Exception as e:\n",
+    "                logger.error(f'Failed to retrieve nutritional information for product: {productId}-{product[\"title\"]}')\n",
+    "                logger.error(f'{e}\\n')\n",
+    "                failed_products.append(product)\n",
+    "                continue\n",
     "        \n",
     "\n",
     "nutritional_df = pd.DataFrame(zip(product_id, nutrientType, nutrientValue, unit, unitLabel), columns=['productId', 'nutrientType', 'nutrientValue', 'unit', 'unitLabel'])\n",
